*SVN*

* Added TAG option for rake rails:freeze:edge, so you can say rake rails:freeze:edge TAG=rel_1-1-0 to lock to the 1.1.0 release [DHH]

* Applied Prototype $() performance patches (#4465, #4477) and updated script.aculo.us [Sam Stephenson, Thomas Fuchs]

* Use --simple-prompt instead of --prompt-mode simple for console compatibility with Windows/Ruby 1.8.2 #4532 [starr@starrnhorne.com]

* Make Rails::VERSION implicitly loadable #4491. [Nicholas Seckar]

* Fixed rake rails:freeze:gems #4518 [benji@silverinsanity.com]

* Added -f/--freeze option to rails command for freezing the application to the Rails version it was generated with [DHH]

* Added gem binding of apps generated through the rails command to the gems of they were generated with [Nicholas Seckar]

* Added expiration settings for JavaScript, CSS, HTML, and images to default lighttpd.conf [DHH]

* Added gzip compression for JavaScript, CSS, and HTML to default lighttpd.conf [DHH]

* Avoid passing escapeHTML non-string in Rails' info controller [Nicholas Seckar]


*1.1.0* (March 27th, 2005)

* Allow db:fixtures:load to load a subset of the applications fixtures. [Chad Fowler]

  ex.

   rake db:fixtures:load FIXTURES=customers,plans

* Update to Prototype 1.5.0_pre1 [Sam Stephenson]

* Update to script.aculo.us 1.6 [Thomas Fuchs]

* Add an integration_test generator [Jamis Buck]

* Make all ActionView helpers available in the console from the helper method for debugging purposes. n.b.: Only an 80% solution. Some stuff won't work, most will. [Marcel Molina Jr.]

  ex.

    >> puts helper.options_for_select([%w(a 1), %w(b 2), %w(c 3)])
    <option value="1">a</option>
    <option value="2">b</option>
    <option value="3">c</option>
    => nil

* Replaced old session rake tasks with db:sessions:create to generate a migration, and db:sessions:clear to remove sessions. [Rick Olson]

* Reject Ruby 1.8.3 when loading Rails; extract version checking code. [Chad Fowler]
