@@ -1,5 +1,7 @@
 *SVN*
 
+* Fixed that spawner should daemonize if running in repeat mode [DHH]
+
 * Added TAG option for rake rails:freeze:edge, so you can say rake rails:freeze:edge TAG=rel_1-1-0 to lock to the 1.1.0 release [DHH]
 
 * Applied Prototype $() performance patches (#4465, #4477) and updated script.aculo.us [Sam Stephenson, Thomas Fuchs]
